# y-sweet

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: integration-tests.yml  publish-github-packages.yml
crates/: openapi.yaml
crates/.serena/: project.yml
crates/.serena/memories/: latency_optimization.md
crates/y-sweet/: Cargo.toml
crates/y-sweet-core/: Cargo.toml
crates/y-sweet-core/src/: api_types_ext.rs  doc_connection.rs  doc_sync.rs  sync_kv.rs
crates/y-sweet-worker/src/: durable_object.rs
crates/y-sweet/src/: main.rs  server.rs  server_ext.rs
crates/y-sweet/tests/: e2e_broadcast.rs
debugger/: package.json
debugger/src/app/: debugger.tsx  page.tsx
examples/nextjs/: package.json
examples/nextjs/src/app/: error.tsx
examples/nextjs/src/app/(demos)/blocknote/: BlockNote.tsx  page.tsx
examples/nextjs/src/app/(demos)/code-editor/: CodeEditor.tsx
examples/nextjs/src/app/api/auth/: route.ts
examples/nextjs/src/components/: StateIndicator.tsx
examples/vanilla/: package.json
examples/vanilla/src/: client.js  server.js
js-pkg/client/: README.md  package.json
js-pkg/client/src/: provider.ts
js-pkg/create-y-sweet-app/: README.md  package.json
js-pkg/create-y-sweet-app/src/frameworks/nextjs/: README.md  package.json
js-pkg/create-y-sweet-app/src/frameworks/remix/: README.md  package.json
js-pkg/react/: README.md  package.json
js-pkg/react/src/: main.tsx
js-pkg/sdk/: README.md  package.json
local-first-landscape/: data.js
releaser/: README.md
releaser/src/: main.rs  packages.rs  releaser.rs
releaser/src/package_manager/: mod.rs
tests/: package.json
tests/src/: cjs.test.ts  convert.test.ts  doc-server.test.ts  index.test.ts  sdk-error.test.ts  util.ts
(+21 files in other folders)
