[package]
name = "y-sweet-core"
version = "0.9.1"
edition = "2021"
description = "Sans-IO core of the y-sweet yjs CRDT server."
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[features]
default = ["sync"]
# `dep:tokio` pulls in tokio::sync::broadcast for the broadcast fan-out used by
# the native (multi-threaded) server. The wasm worker builds with
# `default-features = false`, so it never compiles tokio.
sync = ["yrs/sync", "dep:tokio"]
single-threaded = []

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
aws-config = { version = "=1.5.11", default-features = false, features = ["rt-tokio", "credentials-process", "sso", "behavior-version-latest"] }
aws-credential-types = "1.2.5"
aws-sdk-s3 = { version = "=1.89.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
    "sigv4a",
] }
aws-types = "1.2.5"
bincode = "1.3.3"
bytes = "1.5.0"
data-encoding = "2.4.0"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
sha2 = "0.10.7"
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["wasm-bindgen"] }
tokio = { version = "1.29.1", features = ["sync"], optional = true }  # Required for broadcast channels (sync feature only)
tracing = "0.1.37"
yrs = { version = "0.19.1" }
yrs-kvstore = "0.3.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
dashmap = "6.0.1"
